--corrected pixel according to figma

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-image: url(/assets/Images/Group1933.png);
-  background-position: right -3em bottom -240px;
+  background-position: right -4em bottom -300px;
   background-repeat: no-repeat;
 }
 
@@ -71,7 +71,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px 0px;
+  padding-top: 100px ;
 }
 
 .sub-container {
@@ -83,7 +83,6 @@ body {
 .fullstack_Text_div {
   z-index: -1;
   width: 1000px;
-  min-height: 323px;
 }
 
 .fullstack_Text_div .title {
@@ -109,12 +108,14 @@ body {
   display: flex;
   position: relative;
   left: 1%;
+  gap:189.4px;
+  margin-top: -140px;
 }
 
 .join_logo {
-  position: absolute;
-  right: 50px;
-  top: -150px;
+  position: relative;
+  right: -60px;
+  top: -10px;
   width: 250px;
 }
 
@@ -152,8 +153,8 @@ body {
 } */
 
 .BoothTime_text {
-  max-width: 440px;
-  margin-top: -14%;
+  max-width: 445px;
+  height: 320px;
 }
 
 .BoothTime_text .h3 {
@@ -191,7 +192,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-image: url(/assets/Images/Group\ 1926.png);
-  background-position: left -4em top 65px;
+  background-position: left -4em top 134px;
   background-repeat: no-repeat;
 
 }
@@ -199,7 +200,7 @@ body {
 .sub-group-1 {
   width: 1000px;
   margin: 0 auto;
-  padding: 50px 0px;
+  padding: 74px 0px;
 }
 
 .Topgolf_logo_Text {
@@ -334,11 +335,9 @@ body {
 .Form_Area {
   width: 444px;
   min-height: 707px;
-  top: 2045px;
-  left: 1217px;
   border-radius: 8px;
   background-color: rgba(240, 115, 88, 1);
-  margin-top: 13%;
+  margin-top: 18%;
   display: flex;
   flex-direction: column;
   align-items: center;
